# cygnus

./: .gitignore  HONESTY.md  LICENSE  PLAN.md  README.md  pyproject.toml  start_live_demo.sh
cygnus/: __init__.py  __main__.py  calibration.py  controller.py  demo.py  kinematics.py  memory.py  motion_lock.py  poses.py  safety.py  server.py  skill_audit.py  skills.py  types.py  vision.py
cygnus/cognition/: __init__.py  backend.py  hosted.py  local.py
cygnus/robot/: __init__.py  base.py  sim.py  so101.py
docs/: MOTIONS.md
live-robot-demo/: index.html  package-lock.json  package.json
live-robot-demo/src/: App.jsx  index.css
reflexos/: __init__.py  __main__.py  calibration.py  controller.py  demo.py  detector.py  kinematics.py  motion_lock.py  poses.py  rest_server.py  safety.py  server.py  skill_audit.py  skills.py  types.py  vision.py
reflexos/benchmark/: README.md  __init__.py  __main__.py  pickplace.py  runner.py  server.py
reflexos/cognition/: hosted.py  local.py  reasoning.py
reflexos/robot/: sim.py  so101.py
scripts/: adaptive_grab.py  capture_pose.py  run_robot.sh  smoke_mcp.py
skills/: body_schema_validation_demo.json  bucket.json  clear_table_retract.json  drop_at_1.json  drop_at_2.json  drop_at_3.json  drop_at_4.json  drop_at_5.json  drop_at_6.json  drop_at_bucket.json  ee_x_minus_1cm.json  ee_x_plus_1cm.json  ee_y_minus_1cm.json  ee_y_plus_1cm.json  forward_up_diagonal_high_pose.json  free_space_box_1cm.json  grab.json  grab_at_1.json  grab_at_2.json  grab_at_3.json  grab_at_4.json  grab_at_5.json  grab_at_6.json  grabbing_motion_practice.json  gripper_half_close.json  home.json  home_harness_rest_ceiling_cam.json  home_reach_grab_home_demo.json  home_v2.json  lift_upward_high_pose.json  paper_pos_1.json  paper_pos_2.json  paper_pos_3.json  paper_pos_4.json  paper_pos_5.json  paper_pos_6.json  reach_forward_home_height_x044.json  release.json  settle_and_open.json  stretch_forward_high_pose.json  (+3 more)
skills/_archive/: clearance_lift_small.json  clearance_lower_small.json  gripper_close.json  gripper_open.json  home_v2.json  retract_forward_stage_x042.json
skills/body_schema_validation_demo/: SKILL.md
skills/bucket/: SKILL.md
skills/clear_table_retract/: SKILL.md
skills/drop_at_1/: SKILL.md
skills/grab/: SKILL.md
tests/: test_antifragility.py  test_benchmark.py  test_safety_calibration.py  test_training_loop.py
website/: README.md  package-lock.json  package.json
(+92 files in other folders)
