[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflexos"
version = "0.1.0"
description = "AI-native training layer for robot workers — agents that make robots cheaper to teach, adapt, and redeploy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aaron Koivunen" }]
# Core (sim + the agent-training demo) needs nothing beyond the stdlib.
dependencies = []

[project.optional-dependencies]
server = ["mcp>=1.0"]                  # the robot MCP server (FastMCP)
robot = ["lerobot[feetech]>=0.5.1"]    # the real SO-101 arm
kinematics = [
    "cmeel-tinyxml2>=10,<11",
    "cmeel-urdfdom>=4,<5",
    "placo>=0.9",
]            # FK/IK solver for Cartesian EE tools (move_ee_*)
llm = ["openai>=1.0"]                  # online System-2 reasoner (Azure/OpenAI)
dev = [
    "pytest>=8",
    "placo>=0.9",
    "cmeel-urdfdom>=4,<5",
    "cmeel-tinyxml2>=10,<11",
]      # placo so the kinematics test runs in CI

[project.scripts]
reflexos = "reflexos.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["reflexos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
